<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.artofarc.eai</groupId>
	<artifactId>aq-jndi</artifactId>
	<packaging>jar</packaging>
	<version>1.3-SNAPSHOT</version>
	<name>aq-jndi</name>
	<url>https://github.com/karalus/aq-jndi</url>
	<properties>
		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mmz</maven.build.timestamp.format>
	</properties>	
	<scm>
		<url>scm:git:git@github.com:karalus/aq-jndi.git</url>
		<connection>scm:git:git@github.com:karalus/aq-jndi.git</connection>
		<developerConnection>scm:git:git@github.com:karalus/aq-jndi.git</developerConnection>
		<tag>HEAD</tag>
	</scm>	
	<distributionManagement>
		<repository>
			<id>localDeploy</id>
			<url>file:///tmp</url>
		</repository>
	</distributionManagement>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.jms</groupId>
			<artifactId>jms-api</artifactId>
			<version>1.1-rev-1</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.oracle.database.messaging/aqapi -->
		<dependency>
			<groupId>com.oracle.database.messaging</groupId>
			<artifactId>aqapi</artifactId>
			<version>19.3.0.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
